[project]
name = "mybgg"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ben Gable", email = "ben@bengable.co.uk" }
]
dependencies = [
    "algoliasearch>=3.0.0",
    "certifi>=2024.2.2",
    "chardet>=5.2.0",
    "declxml>=1.1.3",
    "idna>=3.6",
    "pillow>=10.3.0",
    "requests>=2.31.0",
    "requests-cache>=1.2.0",
    "colorgram-py>=1.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mybgg"]
